# cr8tor

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  cr8tor.code-workspace  env_template  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: init_project.yml  init_project_repo.yaml  orchestrator-linux.yml  orchestrator.yml  project_loader.yaml  runner-keep-alive.yml  test_workflow.yml  update_mkdocs.yml  validate_main  validate_main.yml
.qodo/: history.sqlite
cr8tor-cli/branching-strategy/: index.html
cr8tor-cli/commands/: index.html
cr8tor-cli/development/: index.html
cr8tor-cli/example_usage/: index.html
cr8tor-cookiecutter/branching-strategy/: index.html
cr8tor-cookiecutter/overview/: index.html
cr8tor-publisher/approval-service/: index.html
cr8tor-publisher/deploy-to-kubernetes/: index.html
cr8tor-publisher/metadata-service/: index.html
cr8tor-publisher/overview/: index.html
cr8tor-publisher/publish-service/: index.html
developer-guide/branching-strategy/: index.html
developer-guide/install-cr8tor-cli/: index.html
developer-guide/orchestration-layer-setup/: index.html
developer-guide/overview/: index.html
developer-guide/source-setup/: index.html
docs/: api_reference.md  cli.md  commands.md  gettingstarted.md  index.md  schema_reference.md
docs/cr8tor-cli/: branching-strategy.md  commands.md  development.md  example_usage.md
docs/cr8tor-cookiecutter/: branching-strategy.md  overview.md
docs/cr8tor-publisher/: approval-service.md  (+4 more)
examples/: README.md
search/: search_index.json
(+77 files in other folders)
