[project]
name = "cr8tor"
version = "0.1.0"
description = "Python package to create 5s-Crates for LSC SDE"
readme = "README.md"
authors = [{ name = "vvcb", email = "vvcb.n1@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.10.4", "rocrate>=0.13.0", "typer>=0.15.1"]

[project.scripts]
cr8tor = "cr8tor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyterlab>=4.3.4", "pre-commit>=4.0.1", "ruff>=0.8.6"]
