[project]
name = "cr8tor"
version = "0.1.0"
description = "Python package to create 5s-Crates for LSC SDE"
readme = "README.md"
authors = [{ name = "vvcb", email = "vvcb.n1@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "bagit>=1.8.1",
    "cookiecutter>=2.6.0",
    "pydantic>=2.10.4",
    "rocrate>=0.13.0",
    "tomlkit>=0.13.2",
    "typer>=0.15.1",
    "toml>=0.10.2",
    "python-dotenv>=0.19.1",
    "rdflib>=7.1.3",
]

[project.scripts]
cr8tor = "cr8tor.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "griffe>=1.5.5",
    "griffe-pydantic>=1.1.0",
    "jupyterlab>=4.3.4",
    "mkdocs-autorefs>=1.3.0",
    "mkdocs-material>=9.5.49",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
    "pre-commit>=4.0.1",
    "pymdown-extensions>=10.14",
    "ruff>=0.8.6",
]
